<?xml version="1.0" encoding="utf-8"?>
<com.example.myapplication.ScreenPager
    xmlns:a="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:id = "@+id/view8"

    tools:context="com.example.myapplication.Main6Activity">
    <ScrollView
        a:layout_width="match_parent"
        a:layout_height="match_parent"
        a:background="@color/colorBackground">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorScroll">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/view8_0_text0"
                android:textSize="25sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/view8_0_text1"
                android:paddingBottom="5dp"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
    <ScrollView
        a:layout_width="match_parent"
        a:layout_height="match_parent"
        a:background="@color/colorBackground">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/constraintLayout">
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center"
                android:text="" />

            <TextView

                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view8_1_text0"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp" />

            <Button

                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view8_1_text1"
                android:textSize="17sp"
                android:onClick="onClick"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/back" />


            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view8_1_text2"
                android:textSize="17sp"
                android:onClick="onClick1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/back"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick2"
                android:text="@string/view8_1_text3"
                android:textSize="17sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/back"/>

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick3"
                android:text="@string/view8_1_text4"
                android:textSize="17sp"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/back"/>

        </LinearLayout>
    </ScrollView>
    <ScrollView
        a:layout_width="match_parent"
        a:layout_height="match_parent"
        a:background="@color/colorBackground">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorScroll">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/view8_2_text0"
                android:textSize="25sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingBottom="5dp"
                android:text="@string/view8_2_text1"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
    <ScrollView
        a:layout_width="match_parent"
        a:layout_height="match_parent"
        a:background="@color/colorBackground">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center"
                android:text="" />
            <TextView

                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/view8_3_text0"
                android:textSize="20sp"
                android:layout_marginTop="5dp" />

            <Button

                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/view8_3_text1"
                android:layout_marginTop="25dp"
                android:background="@drawable/back"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:onClick = "onClick4" />


            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view8_3_text2"
                android:textSize="17sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:onClick = "onClick5"
                android:background="@drawable/back" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick6"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/view8_3_text3"
                android:textSize="17sp"
                android:background="@drawable/back" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick7"
                android:text="@string/view8_3_text4"
                android:textSize="17sp"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/back" />


        </LinearLayout>
    </ScrollView>
    <ScrollView
        a:layout_width="match_parent"
        a:layout_height="match_parent"
        a:background="@color/colorBackground">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:orientation="vertical"
            android:layout_marginRight="7dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorScroll">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/view8_4_text0"
                android:textSize="25sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/view8_4_text1"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colororange">
                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp">
                    <TextView
                        android:id = "@+id/textView"
                        android:background="@color/color_white_black"
                        android:layout_margin="2dp"
                        android:padding="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        android:text="@string/view8_4_text2"
                        android:textSize="18sp" />
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id = "@+id/q"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="80dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="top"
                android:id="@+id/constraintLayout1">
                <TextView
                    android:id="@+id/textView81"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center"
                    android:text="" />
                <TextView
                    android:id="@+id/textView171"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/view8_5_text0"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp" />
                <Button

                    android:id="@+id/button161"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/back"
                    android:textSize="17sp"
                    android:text="@string/view8_5_text1"
                    android:onClick = "onClick8" />

                <Button
                    android:id="@+id/button151"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view8_5_text2"
                    android:textSize="17sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/back"
                    android:onClick = "onClick9" />
                <Button
                    android:id="@+id/button141"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick10"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="17sp"
                    android:background="@drawable/back"
                    android:text="@string/view8_5_text3" />
                <Button
                    android:id="@+id/button131"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick11"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/back"
                    android:textSize="17sp"
                    android:text="@string/view8_5_text4" />

            </LinearLayout>
        </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick12"
                android:background="@drawable/back"
                android:text="@string/view_next"
                android:textSize="17sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    </android.support.constraint.ConstraintLayout>
</com.example.myapplication.ScreenPager>
